fix: cord error - add domains